// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AnalysisDetail /> should render 1`] = `
<div>
  <Header__AnalysisHeader>
    <Header__AnalysisHeaderAlgorithm>
      PathoscopeBowtie
       for 
      bar
    </Header__AnalysisHeaderAlgorithm>
    <Header__AnalysisHeaderCreated>
      bob
       started 
      <RelativeTime />
    </Header__AnalysisHeaderCreated>
  </Header__AnalysisHeader>
  <PathoscopeViewer />
</div>
`;

exports[`<AnalysisDetail /> should render error when detail.algorithm is invalid] 1`] = `
<div>
  "Unusable analysis detail content")
</div>
`;

exports[`<AnalysisDetail /> should render expected view when [detail.algorithm='nuvs'] 1`] = `
<div>
  <Header__AnalysisHeader>
    <Header__AnalysisHeaderAlgorithm>
      NuVs
       for 
      bar
    </Header__AnalysisHeaderAlgorithm>
    <Header__AnalysisHeaderCreated>
      bob
       started 
      <RelativeTime />
    </Header__AnalysisHeaderCreated>
  </Header__AnalysisHeader>
  <Connect(NuVsViewer) />
</div>
`;

exports[`<AnalysisDetail /> should render loading when [detail=null] 1`] = `<LoadingPlaceholder />`;

exports[`<AnalysisDetail /> should render message when error is not null 1`] = `<NotFound />`;

exports[`<AnalysisDetail /> should render pending when [detail.ready=false] 1`] = `
<Uncontrolled(Panel)>
  <PanelBody
    bsClass="panel"
    collapsible={false}
  >
    <LoadingPlaceholder
      margin="1.2rem"
      message="Analysis in progress"
    />
  </PanelBody>
</Uncontrolled(Panel)>
`;
